--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  pdf: ^3.4.0
-  photo_view: ^0.14.0
-  path_provider: ^2.0.11
+  pdf: ^3.11.1
+  photo_view: ^0.15.0
+  flutter_image_compress: ^2.3.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
