--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,6 +35,7 @@ android {
         versionCode 1
         versionName "1.0"
         ndkVersion "21.1.6352462"
+        namespace "com.document.scanner.flutter.document_scanner_flutter"
         ndk {
             moduleName "Scanner"
             abiFilters 'armeabi-v7a'
