--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,16 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 31
 //test
+
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+    
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 31
