--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,9 +30,9 @@ android {
     compileSdkVersion 31
 //test
 
-    compileOptions{
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     
     kotlinOptions {
